Fix diff misalignment, refactored listeners to be more uniform, added swallow error for submodule checkout

--- a/src/app/components/diff-viewer/diff-viewer.component.scss
+++ b/src/app/components/diff-viewer/diff-viewer.component.scss
@@ -17,7 +17,8 @@
 .linenumber-block {
   line-height: 1.6;
   font-size: 87.5%;
-  padding: .5em .5em 1.1em .5em;
+  padding: .5em;
+  margin-bottom: .5em;
   display: flex;
   flex-direction: column;
 
